@@ -1,8 +1,9 @@
 == Changelog ==
 = 1.7.2 =
 * Feature: Now is possible to use %pwb-brand% in the product URLs
+* Fix: Fatal error in some themes (like Salient)
 * Fix: Some php notices and warnings fixed
-* Fix: Don't show brand description/banner on pages
+* Fix: Don't show brand description/banner in paged
 = 1.7.1 =
 * Feature: Extends the [products] shortcode to allow 'brands' attribute
 * Feature: The brands column is sortable now
